# melder

./: #FUTURE.md#  .gitattributes  .gitignore  AGENTS.md  CUSTOM_BM25_DESIGN.md  Cargo.toml  Competitor_analysis.md  DATA_DESIGN.md  DATA_PLAN.md  DESIGN.md  FUTURE.md  LIVE_MODE_IMPROVEMENTS.md  LIVE_PERFORMANCE.md  NEW_DIRECTION.md  PHASE1_DETAILED_PLAN.md  PHASED_PLAN_HIGH_LEVEL.md  PLAN.md  README.md  SCALING_TO_MILLIONS_SQLITE_STEP.md  START_HERE.md  TODO.md  TUNE.md  build.rs  linux_gpu_encode_test.md  opencode.json  tmp.txt  vs_Elastic_OpenSearch.md
.github/workflows/: ci.yml  release.yml
.opencode/plans/: phase2-sqlite-record-store.md
bench/: cpu_monitor.py  live_batch_test.py  live_concurrent_test.py  live_stress_test.py
bench/snapshots/: after_match.csv  after_review.csv  after_unmatched.csv  before_match.csv  before_review.csv  before_unmatched.csv
benchmarks/: .gitignore
benchmarks/accuracy/: eval.py  generate_data.sh
benchmarks/batch/: generate_data.sh  run_all_tests.py
benchmarks/data/: dataset_a_10k.jsonl  dataset_a_10k.parquet  dataset_b_10k.csv  dataset_b_10k.jsonl  dataset_b_10k.parquet  generate.py  ground_truth_crossmap_10k.csv
benchmarks/live/: generate_data.sh  run_all_tests.py  sqlite_cache_sweep.py
benchmarks/scripts/: live_batch_test.py  live_concurrent_test.py  live_stress_test.py  measure_memory.sh  run_all_live.sh  smoke_test.py
docs/: _config.yml  accuracy-and-tuning.md  api-reference.md  architecture.d2  batch-mode.md  batch_pipeline.d2  building.md  cli-reference.md  codebase-course.html  combined_pipeline.d2  configuration.md  enroll-mode.md  fine-tuning.md  hooks.md  index.html  live-mode.md  live_hotpath.d2  live_pipeline.d2  performance.md  remote-encoder.md  scoring.md  vector-caching.md
docs/_layouts/: default.html
examples/batch/: README.md  config.yaml  incoming.csv  reference.csv
examples/live/: README.md  config.yaml
prompts/: doc-agent.txt
scripts/: serve-views.py
src/: budget.rs  error.rs  lib.rs  main.rs  models.rs  util.rs
src/api/: handlers.rs  mod.rs  server.rs
src/batch/: engine.rs  mod.rs  writer.rs
src/bm25/: index.rs  mod.rs  scorer.rs  simple.rs
src/cli/: cache.rs  crossmap.rs  enroll.rs  export.rs  mod.rs  review.rs  run.rs  serve.rs  tune.rs  validate.rs
src/config/: defaults.rs  derivation.rs  enroll_schema.rs  loader.rs  mod.rs  schema.rs  validation.rs
src/crossmap/: local.rs  memory.rs  mod.rs  sqlite.rs  traits.rs
src/data/: csv.rs  jsonl.rs  mod.rs  parquet.rs
src/encoder/: coordinator.rs  mod.rs  pool.rs
src/fuzzy/: mod.rs  partial_ratio.rs  ratio.rs  token_sort.rs  wratio.rs
src/hooks/: mod.rs  writer.rs
src/index/: cache.rs  flat.rs  mod.rs
src/matching/: blocking.rs  candidates.rs  engine.rs  exclusions.rs  mod.rs  pipeline.rs
src/output/: build.rs  csv.rs  db.rs  manifest.rs  mod.rs  parquet.rs  scoring_log.rs  views.sql
src/scoring/: embedding.rs  exact.rs  mod.rs
src/session/: mod.rs
src/state/: live.rs  match_log.rs  mod.rs  state.rs  upsert_log.rs
src/store/: memory.rs  mod.rs  sqlite.rs
src/synonym/: dictionary.rs  generator.rs  index.rs  mod.rs  scorer.rs
src/vectordb/: common.rs  field_indexes.rs  field_vectors.rs  flat.rs  manifest.rs  mod.rs  tests.rs  texthash.rs  usearch_backend.rs
test-data/gpu-test/: a.csv  (+2 more)
testdata/: dataset_a_10000.jsonl  dataset_a_10k.csv  dataset_a_10k.parquet  dataset_a_1k.csv  dataset_b_1000.csv  dataset_b_10000.csv  dataset_b_10000.jsonl  dataset_b_10k.parquet  generate.py  ground_truth_crossmap.csv
tests/: remote_encoder.rs
vault/: benchmarks_and_experiments.md  project_overview.md  todo.md
(+257 files in other folders)
