[package]
name = "melder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "meld"
path = "src/main.rs"

[dependencies]
# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# CSV
csv = "1"

# Fuzzy matching
rapidfuzz = "0.5"

# Embedding inference
fastembed = "5"

# Async runtime + HTTP server
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }

# Concurrent data structures
dashmap = "6"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Parallelism
rayon = "1"

# Parquet support (feature-flagged)
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap"] }
arrow = { version = "54", optional = true, default-features = false, features = ["prettyprint"] }

# HNSW vector index (feature-flagged)
usearch = { version = "2", optional = true }

# BM25 full-text search (feature-flagged)
tantivy = { version = "0.22", optional = true }

# SQLite storage (live mode persistence)
rusqlite = { version = "0.32", features = ["bundled"] }

# System info for memory detection (memory_budget: auto)
sysinfo = { version = "0.30", default-features = false, features = ["default"] }

# Temporary directories (batch SQLite temp store)
tempfile = "3"

# Error handling
anyhow = "1"
thiserror = "2"

[features]
parquet-format = ["dep:parquet", "dep:arrow"]
usearch = ["dep:usearch"]
bm25 = ["dep:tantivy"]

[dev-dependencies]
