[package]
name = "melder"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "meld"
path = "src/main.rs"

[dependencies]
# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# CSV
csv = "1"

# Fuzzy matching
rapidfuzz = "0.5"

# Embedding inference
fastembed = "5"

# ONNX Runtime (direct dep for GPU execution provider types; version must match fastembed's pin)
ort = { version = "=2.0.0-rc.11", default-features = false, optional = true }

# Async runtime + HTTP server
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "catch-panic"] }

# Concurrent data structures
dashmap = "6"
crossbeam-channel = "0.5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Parallelism
rayon = "1"

# Parquet support (feature-flagged)
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap"] }
arrow = { version = "54", optional = true, default-features = false, features = ["prettyprint"] }

# HNSW vector index (feature-flagged)
usearch = { version = "2", optional = true }

# HuggingFace Hub model download
hf-hub = "0.4"

# Hardware-accelerated dot product (NEON / SVE / AVX2 / AVX-512)
simsimd = { version = "6", optional = true }

# SQLite storage (live mode persistence)
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "2"

# POSIX FFI (used for stderr suppression on macOS with gpu-encode)
libc = "0.2"

[features]
parquet-format = ["dep:parquet", "dep:arrow"]
usearch = ["dep:usearch"]
simd = ["dep:simsimd"]
builtin-model = []
gpu-encode = ["dep:ort", "fastembed/ort-load-dynamic"]


[build-dependencies]
hf-hub = "0.4"

[dev-dependencies]
tempfile = "3"
